# mcp-verifier

./: .gitignore  Dockerfile  pyproject.toml
src/mcp_client/: __main__.py
src/mcp_client/core/: agent.py  session.py  streaming.py
src/mcp_client/ui/: chat.py
src/mcp_client/utils/: anthropic.py  graph.py  mcp.py
src/mcp_verifier/: __init__.py  cli.py  ui.py
src/mcp_verifier/analyzers/: description.py  guidelines.py  security.py
src/mcp_verifier/core/: interfaces.py  models.py  server_management.py  upload_handler.py  verification.py
src/mcp_verifier/processors/: file_processor.py
src/mcp_verifier/utils/: dependency_installer.py  process.py
