[tool.poetry]
name = "mcp-verifier"
version = "0.1.0"
description = "MCP Server Verification Tool"
authors = ["Filipp Trigub <filipp.trigub@infolab.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.0"        # LangChain framework
langgraph = "^0.0.10"       # State machine graphs
anthropic = "^0.7.0"        # Claude API client
pyyaml = "^6.0"            # YAML parsing
pydantic = "^2.0"          # Data validation
typer = "^0.9.0"           # CLI interface
rich = "^13.0"             # Rich terminal output
psutil = "^5.9"            # Process management

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
black = "^23.0"
mypy = "^1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"