[tool.poetry]
name = "mcp-verifier"
version = "0.1.0"
description = "MCP Server Verification Tool"
authors = ["Filipp Trigub <filipp.trigub@infolab.ai>"]

[tool.poetry.dependencies]
python = "^3.12"
langchain-community ="^0.3.12"
langchain-anthropic = "^0.3.0"
langgraph = "*"       # State machine graphs
pyyaml = "^6.0"            # YAML parsing
pydantic = "^2.0"          # Data validation
typer = "^0.9.0"           # CLI interface
rich = "^13.0"             # Rich terminal output
psutil = "^5.9"            # Process management
aiofiles = "^24.1.0"
streamlit = "^1.32.0"      # Web UI

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
black = "^23.0"
mypy = "^1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"